[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/user interface/ChangeSceneButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/user interface/themes/DarkTheme/StyleBox/Panel.stylebox" type="StyleBox" id=2]
[ext_resource path="res://assets/user interface/themes/MinimalUI/MinimalUI.tres" type="Theme" id=3]
[ext_resource path="res://assets/user interface/backgrounds/BackgroundApp.png" type="Texture" id=4]
[ext_resource path="res://src/screens/LoginScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=6]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 1080.0 ]
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -101.0
margin_top = 50.0
margin_right = 101.0
margin_bottom = 130.0
theme = ExtResource( 6 )
text = "Login"
uppercase = true

[node name="Menu1" type="VBoxContainer" parent="."]
anchor_left = 0.207
anchor_top = 0.548
anchor_right = 0.25
anchor_bottom = 0.548
margin_left = -250.0
margin_top = -392.0
margin_right = 250.0
margin_bottom = -161.0
custom_constants/separation = 15

[node name="MailField" type="LineEdit" parent="Menu1"]
margin_right = 582.0
margin_bottom = 108.0
size_flags_vertical = 3
align = 1
placeholder_text = "Email"

[node name="PasswordField" type="LineEdit" parent="Menu1"]
margin_top = 123.0
margin_right = 582.0
margin_bottom = 231.0
size_flags_vertical = 3
align = 1
max_length = 10
secret = true
placeholder_text = "Password"

[node name="Menu2" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1275.0
margin_top = -880.0
margin_right = -62.0
margin_bottom = -499.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LoginButton" parent="Menu2" instance=ExtResource( 1 )]
margin_right = 583.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 200, 100 )
text = "ACCEDI"

[node name="CreateAccount" parent="Menu2" instance=ExtResource( 1 )]
margin_top = 132.0
margin_right = 583.0
margin_bottom = 249.0
rect_pivot_offset = Vector2( 200, 100 )
text = "CREA ACCOUNT"

[node name="QuitButton" parent="Menu2" instance=ExtResource( 1 )]
margin_top = 264.0
margin_right = 583.0
margin_bottom = 381.0
rect_pivot_offset = Vector2( 200, 100 )
text = "ESCI"

[node name="NotificationPanel" type="PanelContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.838021
anchor_right = 0.5
anchor_bottom = 0.838021
margin_left = -250.0
margin_top = -95.0627
margin_right = 250.0
margin_bottom = -11.0627
theme = ExtResource( 3 )
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Notification" type="Label" parent="NotificationPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 498.0
margin_bottom = 82.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Menu2/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Menu2/CreateAccount" to="." method="_on_CreateAccount_pressed"]
[connection signal="pressed" from="Menu2/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
